bug fix refactor inputs to take 100% width and disable the tooltip show bug

--- a/src/lib/components/base/datePickers/datePicker/_variants.scss
+++ b/src/lib/components/base/datePickers/datePicker/_variants.scss
@@ -5,6 +5,7 @@
     position: relative;
     display: flex;
     flex-direction: row-reverse;
+    width: 100%;
 
     .glare-date-picker-icon {
         position: absolute;
