bugfix on InputField and LabelLessInput and dropDownMenuItem
InputField and LabelLessInput:
-  fix css fucus state
- make the dropDown appear when the input on focus state
- make the dropDown hide when click a list item

--- a/src/lib/components/base/fields/inputField/input/_variants.scss
+++ b/src/lib/components/base/fields/inputField/input/_variants.scss
@@ -65,6 +65,9 @@
         }
     }
 
+    opacity: 1;
+    border-color: $border-presentation-state-focus !important;
+    box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.30);
 }
 
 
