--- a/src/lib/components/base/dropDowns/dropDownMenuItem/styles/style.scss
+++ b/src/lib/components/base/dropDowns/dropDownMenuItem/styles/style.scss
@@ -15,10 +15,14 @@
     border-radius: 4px;
     outline: 1px solid transparent;
     background-color: $white-00;
-        border: none;
+    border: none;
     gap: 8px;
     position: relative;
     transition: all 300ms ease-in-out;
+
+    .label {
+        color: inherit !important;
+    }
 
 
     .dropDownMenuItem-icon {
