fix tooltip overflow

--- a/src/lib/components/base/tooltips/tooltip/style.scss
+++ b/src/lib/components/base/tooltips/tooltip/style.scss
@@ -5,18 +5,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 29px;
-    width: fit-content;
-    flex-wrap: nowrap;
     position: absolute;
-    top: 50%;
-    right: 102%;
-    transform: translate(-0, -50%);
-    z-index: 100;
+    z-index: 10;
     gap: 0;
 
     p {
-        white-space: nowrap;
         padding: var(--Space-1, 4px);
         color: $content-system-global-primary;
         font-size: 14px;
@@ -25,6 +18,9 @@
         line-height: 147.5%;
         background: $black-600;
         border-radius: 4px;
+        max-width: 300px;
+        overflow: hidden;
+        word-wrap: break-word;
     }
 
     .triangle {
@@ -35,10 +31,9 @@
 
 
 .Tooltip-Right {
-    right: unset;
+    top: 50%;
     left: 102%;
     transform: translate(-0, -50%);
-    flex-direction: row;
 
     .triangle {
         transform: rotate(0deg);
@@ -48,7 +43,7 @@
 .Tooltip-Left {
     top: 50%;
     right: 102%;
-    transform: translate(-0, -50%);
+    transform: translate(0, -50%);
     flex-direction: row-reverse;
 
     .triangle {
@@ -57,25 +52,16 @@
 }
 
 .Tooltip-TOP {
-    right: -11px;
-    left: unset;
-    top: -100%;
-    transform: translate(-50%, -0%);
-    flex-direction: column-reverse;
+    flex-direction: column;
     height: fit-content;
 
     .triangle {
-        transform: rotate(-90deg) translateX(1px);
+        transform: rotate(90deg) translateX(1px);
     }
 
 }
 
 .Tooltip-BOTTOM {
-    right: -11px;
-    left: unset;
-    top: unset;
-    bottom: -100%;
-    transform: translate(-50%, -0%);
     flex-direction: column;
     height: fit-content;
 
