--- a/src/index.css
+++ b/src/index.css
@@ -15,4 +15,9 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background-color: black;
+}
+
+.app {
+    width: 200px;
 }
