--- a/src/lib/components/base/buttons/button/variants/_variants.scss
+++ b/src/lib/components/base/buttons/button/variants/_variants.scss
@@ -142,19 +142,44 @@
 .glare-button-S {
     @include Body-typography-Small-Medium;
     height: 22px;
-    padding: 0px 6px
+    padding: 0px 6px;
+
+    .glare-button-icon {
+        width: 12px;
+
+        i {
+            font-size: 12px;
+        }
+    }
 }
 
 .glare-button-M {
     @include Body-typography-Medium-Medium;
     height: 26px;
-    padding: 0px 8px
+    padding: 0px 8px;
+
+    .glare-button-icon {
+        width: 16px;
+
+        i {
+            font-size: 16px;
+        }
+    }
 }
 
 .glare-button-L {
     @include Body-typography-Large-Medium;
     height: 24px;
-    padding: 0px 15px
+
+    padding: 0px 15px;
+
+    .glare-button-icon {
+        width: 18px;
+
+        i {
+            font-size: 18px;
+        }
+    }
 }
 
 .glare-button-without-icon-S {
