--- a/src/lib/components/base/tabs/tabFormItem/components/sideFormBarItem/style.scss
+++ b/src/lib/components/base/tabs/tabFormItem/components/sideFormBarItem/style.scss
@@ -1,3 +1,5 @@
+@import '../../../../../../styles/typography/index.scss';
+
 .sideFormBarItem {
     padding: 0px 8px;
     height: 36px;
@@ -10,9 +12,12 @@
     overflow: hidden;
     white-space: nowrap;
     border-radius: 4px;
+    border: none;
     outline: 1px solid var(--border-presentation-global-primary);
     background: var(--background-presentation-form-base);
     transition: all 300ms ease-in-out;
+
+    @include Body-typography-Medium-Medium;
 
     &:hover {
         outline: 1px solid var(--border-presentation-global-primary);
