--- a/src/lib/components/base/labels/label/style.scss
+++ b/src/lib/components/base/labels/label/style.scss
@@ -12,7 +12,7 @@
         gap: 4px;
         justify-content: center;
         align-items: flex-end;
-        text-align: center;
+        text-align: start;
         min-height: 10px;
 
         .label {
@@ -30,7 +30,6 @@
             color: var(--content-presentation-state-negative);
             @include Labels-typography-Small-Medium;
         }
-
     }
 }
 
