--- a/src/lib/components/shared/forms/contentColumn/style.scss
+++ b/src/lib/components/shared/forms/contentColumn/style.scss
@@ -25,6 +25,7 @@
             color: var(--content-presentation-global-primary);
             @include Body-typography-Small-Regular;
         }
+
     }
 
     .content-column-labels {
@@ -32,6 +33,12 @@
         justify-content: center;
         align-items: flex-start;
         gap: 4px;
+
+        .content-column-required-label {
+            .requiredLabel {
+                margin-top: 3.5px;
+            }
+        }
     }
 
 }
