--- a/src/lib/components/shared/forms/contentColumn/style.scss
+++ b/src/lib/components/shared/forms/contentColumn/style.scss
@@ -9,10 +9,6 @@
     min-width: 25%;
     gap: 8px;
 
-    .content-column-label {
-        color: var(--content-presentation-global-primary);
-        @include Headers-typography-Small-Regular;
-    }
 
     .content-column-wrapper {
         display: flex;
@@ -21,24 +17,14 @@
         flex-direction: column;
         gap: 8px;
 
-        .content-column-sub-label {
-            color: var(--content-presentation-global-primary);
-            @include Body-typography-Small-Regular;
-        }
-
     }
 
     .content-column-labels {
         display: flex;
         justify-content: center;
         align-items: flex-start;
-        gap: 4px;
-
-        .content-column-required-label {
-            .requiredLabel {
-                margin-top: 3.5px;
-            }
-        }
+        flex-direction: column;
+        gap: 0;
     }
 
 }
@@ -49,8 +35,33 @@
 
 .content-column-size-M {
     min-height: 40px;
+
+    .content-column-labels {
+        .label-container {
+            .label {
+                @include Headers-typography-Small-Regular;
+            }
+
+            .secondaryLabel {
+                @include Body-typography-Small-Regular;
+            }
+        }
+    }
 }
 
 .content-column-size-L {
     min-height: 40px;
+
+    .content-column-labels {
+
+        .label-container {
+            .label {
+                @include Headers-typography-Small-Regular;
+            }
+
+            .secondaryLabel {
+                @include Body-typography-Small-Regular;
+            }
+        }
+    }
 }
