contentColumn bug fix
font style fix

--- a/src/lib/components/base/labels/label/style.scss
+++ b/src/lib/components/base/labels/label/style.scss
@@ -17,6 +17,7 @@
 
         .label {
             color: var(--content-presentation-global-primary);
+            text-align: start;
             @include Body-typography-Small-Regular;
         }
 
