--- a/src/lib/components/base/fields/inputField/input/style.scss
+++ b/src/lib/components/base/fields/inputField/input/style.scss
@@ -21,6 +21,7 @@
         overflow: scroll;
         gap: 4px;
         height: 100%;
+        width: 100%;
 
         .input-container {
             display: flex;
