--- a/src/lib/components/base/badges/badge/styles/default.scss
+++ b/src/lib/components/base/badges/badge/styles/default.scss
@@ -2,7 +2,7 @@
 
     height: 22px;
     width: fit-content;
-    color: black;
+    color: var(--content-presentation-action-light-primary);
     border-radius: 4px;
     display: flex;
     padding: 2px 6px;
@@ -12,6 +12,12 @@
     border-width: 1px;
     border-style: solid;
     transition: all 300ms ease-in-out;
+
+    .badge-label {
+        color: var(--content-presentation-action-light-primary);
+        width: fit-content;
+        white-space: nowrap;
+    }
 
     .badge-icon {
         display: flex;
@@ -30,6 +36,9 @@
         align-items: center;
         height: 12px;
         width: 12px;
+        border: none;
+        background: transparent;
+        color: var(--content-presentation-action-light-primary);
         transition: all 250ms ease-in-out;
 
         i {
