--- a/src/lib/components/base/dropDowns/dropDownMenuItem/styles/style.scss
+++ b/src/lib/components/base/dropDowns/dropDownMenuItem/styles/style.scss
@@ -14,6 +14,7 @@
     border-radius: 4px;
     outline: 1px solid transparent;
     background-color: var(--white-00);
+    margin-top: 2px;
 
     border: none;
     gap: 8px;
@@ -24,7 +25,7 @@
         color: inherit !important;
     }
 
-  
+
     .dropDownMenuItem-icon {
         font-size: 16px;
         color: inherit;
