--- a/src/lib/components/shared/forms/fieldSection/style.scss
+++ b/src/lib/components/shared/forms/fieldSection/style.scss
@@ -1,3 +1,5 @@
+@import '../../../../styles/mediaQuery/queries.scss';
+
 .glare-field-section {
     display: grid;
     grid-template-columns: 20% 75%;
@@ -10,4 +12,12 @@
     /* Align items to the bottom */
     justify-content: space-between;
     /* Spacing between columns */
+
+    @include respond-to(tabletPortrait) {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        gap: 12px;
+    }
 }
