code refactor and add commits

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body {
     font-family: 'SF-Pro';
     width: 100%;
     display: flex;
+    padding: 250px;
     justify-content: center;
     align-items: center;
     height: 100vh;
