--- a/src/lib/components/base/fields/labelLessInput/_variants.scss
+++ b/src/lib/components/base/fields/labelLessInput/_variants.scss
@@ -68,7 +68,7 @@
     .input-container {}
 }
 
-/* system style */
+/* system style colors theme */
 
 .glare-input-labelLess-system-style {
     border: 1px solid var(--border-system-global-primary);
