--- a/src/lib/components/base/fields/inputField/components/input/style.scss
+++ b/src/lib/components/base/fields/inputField/components/input/style.scss
@@ -1,4 +1,4 @@
-@import '../../../../../styles/typography/index.scss';
+@import '../../../../../../styles/typography/index.scss';
 
 .glare-input-field-wrapper {
     width: 100%;
