--- a/src/lib/components/base/fields/labelLessInput/components/inputLabel/style.scss
+++ b/src/lib/components/base/fields/labelLessInput/components/inputLabel/style.scss
@@ -1,4 +1,4 @@
-@import '../../../../../styles/typography/index.scss';
+@import '../../../../../../styles/typography/index.scss';
 
 .glare-InputLabel-wrapper {
     display: flex;
